--- a/templates/courses/index.phtml
+++ b/templates/courses/index.phtml
@@ -1,4 +1,15 @@
 <form action="/users" method="get">
     <input type="search" required name="term">
 </form>
+
+<table>
+    <?php foreach ($users as $user): ?>
+        <tr>
+            <td>
+                <?= $user ?>
+            </td>
+        </tr>
+    <?php endforeach ?>
+</table>
+
 <!-- END -->
